--- a/templates/content/node--ucb-person.html.twig
+++ b/templates/content/node--ucb-person.html.twig
@@ -74,8 +74,7 @@
     <div class="ucb-articles-by-person-block">
       <person-article-list base-uri="{{ baseurlJSON }}" nodeid="{{ node.id }}">
         <div id="ucb-person-article-block-title" style="display:none">
-          <h2>Articles by
-            {{ content.field_ucb_person_first_name }} {{ content.field_ucb_person_last_name }}</h2>
+          <h2>Articles by {{ content.field_ucb_person_first_name['#items'][0].value }} {{ content.field_ucb_person_last_name['#items'][0].value }}</h2>
         </div>
         <div id="ucb-al-loading" style="display:none" class="ucb-list-msg ucb-loading-data">
           <i class="fa-solid fa-spinner fa-3x fa-spin-pulse"></i>
