Article Title Background Update
Removed div displayed image and set it as a background image.
Set the background image to use the `section_background` image style to avoid large image files.

Set background positioning using new preprocess in .theme
Preprocess works like it does in the layout builder sections except it will update immediately if the file image's focal point is updated.

Updated css to reflect new changes. Removal of `absolute` positioning fixes the problem with the navigation being covered by the title. Everything should scale well now.

Changed the top padding to be 300px vs 200px to imitate the old version's bigger title image.

--- a/templates/content/node--ucb-article.html.twig
+++ b/templates/content/node--ucb-article.html.twig
@@ -125,9 +125,9 @@
     <div class="ucb-article" itemscope itemtype="https://schema.org/Article">
       {# If using a Title Background img, render that #}
       {% if content.field_article_title_background.0 %}
+      {% set titleBackground = node.field_article_title_background|file_uri|image_style('section_background') %}
         <header><h1 class="visually-hidden">{{ label }}</h1></header>
-        <div class="backgroundTitleDiv {{ overlayClass }}">
-          {{ content.field_article_title_background }}
+        <div style="background-image: url('{{ titleBackground }}'); background-position: {{ position_vars }};" class="backgroundTitleDiv {{ overlayClass }}">
           <div{{ title_attributes.addClass('ucb-article-heading', 'article-header-' ~ textColor, is_front ? 'visually-hidden') }}>
             <div class="container">
               <h1>{{ label }}</h1>
