--- a/css/ucb-article.css
+++ b/css/ucb-article.css
@@ -140,15 +140,13 @@ i.fa-regular.fa-calendar {
   position: relative;
   z-index: 0;
   object-fit: fill;
+  background-size: cover;
 }
 
 .backgroundTitleDiv .ucb-article-heading {
-  position: absolute;
-  display: block;
-  bottom: 0;
   width: 100%;
   background-color: transparent;
-  padding: 200px 20px 30px;
+  padding: 300px 20px 30px;
 }
 
 .backgroundTitleDiv.ucb-overlay-dark .ucb-article-heading {
