--- a/css/style.css
+++ b/css/style.css
@@ -709,6 +709,11 @@ article .align-left .media-image-caption p {
   font-size: 85%;
 }
 
+/* Center image above caption that has been floated */
+.align-left .imageMediaStyle, .align-right .imageMediaStyle {
+  text-align: center;
+}
+
 .align-right.image_style-large_image_style,
 .align-left.image_style-large_image_style {
   max-width: 100%;
