CuBoulder/tiamat-theme#1318 Updates CSS class name

--- a/css/style.css
+++ b/css/style.css
@@ -1029,8 +1029,8 @@ form label {
   display: inline;
 }
 
-.form-type-checkbox .field-label label,
-.form-type-radio .field-label label {
+.form-type-checkbox .field-label-after label,
+.form-type-radio .field-label-after label {
   display: inline-block;
   font-weight: normal;
 }
