--- a/templates/form/form-element.html.twig
+++ b/templates/form/form-element.html.twig
@@ -80,7 +80,7 @@
     <span class="field-suffix"> {{ suffix }}</span>
   {% endif %}
   {% if label_display == 'after' %}
-    <span class="field-label"> {{ label }}</span>
+    <span class="field-label-after"> {{ label }}</span>
   {% endif %}
   {% if errors %}
     <div class="form-item--error-message">
