Remove from sticky and change link color

--- a/css/block/ucb-mega-menu.css
+++ b/css/block/ucb-mega-menu.css
@@ -83,6 +83,14 @@
   flex-wrap: wrap;
 }
 
+.ucb-main-nav-container .ucb-mega-menu .menu-item .mega-menu-wrapper a{
+  color: #0277bd;
+}
+
+.ucb-main-nav-container .ucb-mega-menu .menu-item .mega-menu-wrapper a:hover{
+  color: #B71C1C;
+}
+
 @media only screen and (max-width: 767px) {
 
   .ucb-mega-menu-column-3 div,
