--- a/css/ucb-sticky-menu.css
+++ b/css/ucb-sticky-menu.css
@@ -67,3 +67,8 @@
 .sticky-menu-inner .ucb-menu li.menu-item a.nav-link:hover {
 	color: var(--ucb-gold);
 }
+
+.sticky-menu-inner .ucb-mega-menu,
+.sticky-menu-inner .ucb-mega-menu-icon {
+	display: none;
+}
