--- a/css/style.css
+++ b/css/style.css
@@ -1187,3 +1187,7 @@ h2.clear-margin,h3.clear-margin,h4.clear-margin,h5.clear-margin,h6.clear-margin,
     columns: 4;
   }
 }
+
+.ucb-basic-page-body {
+  display: inline-block;
+}
