--- a/templates/field/field--node--body--basic-page.html.twig
+++ b/templates/field/field--node--body--basic-page.html.twig
@@ -9,7 +9,7 @@
       <h2{{ title_attributes }}>{{ label }}</h2>
    {% endif %} #}
 {{ title_suffix }}
-<div{{attributes}} class="container bs-background-unstyled block">
+<div{{attributes}} class="ucb-basic-page-body container bs-background-unstyled block">
   {% for item in items %}
     {{ item.content|render }}
   {% endfor %}
