--- a/templates/field/field--field-ucb-person-primary-link.html.twig
+++ b/templates/field/field--field-ucb-person-primary-link.html.twig
@@ -7,7 +7,7 @@
 {% import '@boulder_base/navigation/menu--social-media-menu.html.twig' as socialMediaMenu %}
 
 {% if items %}
-  <ul>
+  <ul class="ucb-person-primary-link">
     {{ socialMediaMenu.links(items, true) }}
   </ul>
 {% endif %}
