--- a/css/ucb-article.css
+++ b/css/ucb-article.css
@@ -141,6 +141,7 @@ i.fa-regular.fa-calendar {
   z-index: 0;
   object-fit: fill;
   background-size: cover;
+  padding-bottom: 20px;
 }
 
 .backgroundTitleDiv .ucb-article-heading {
