Article List: initial refactor to web component for easier user-filtering

--- a/templates/content/node--ucb-article-list.html.twig
+++ b/templates/content/node--ucb-article-list.html.twig
@@ -81,10 +81,7 @@
 
 {# JSON API Endpoint information #}
 {% set articlesJSON = (url('<front>')|render|trim('/'))
-  ~ '/jsonapi/node/ucb_article'
-  ~ '?include[node--ucb_article]=uid,title,ucb_article_content,created,field_ucb_article_summary,field_ucb_article_categories,field_ucb_article_tags,field_ucb_article_thumbnail'
-  ~ '&include=field_ucb_article_thumbnail.field_media_image'
-  ~ '&fields[file--file]=uri,url'
+  ~ '/jsonapi/node/ucb_article?include[node--ucb_article]=uid,title,ucb_article_content,created,field_ucb_article_summary,field_ucb_article_categories,field_ucb_article_tags,field_ucb_article_thumbnail&include=field_ucb_article_thumbnail.field_media_image&fields[file--file]=uri,url'
 %}
 
 {# Filter on only published (status = true) content #}
@@ -94,57 +91,61 @@
 %}
 
 {# include and exclude options set by the user #}
-{% set includeCategories = [] %}
-{% set myCategories =
-  content.field_ucb_filter_by_category|render|striptags|trim|split(' ')
-%}
-{% set includeTags = [] %}
-{% set myTags =
-  content.field_ucb_filter_by_tag|render|striptags|trim|split(' ')
-%}
-{% set excludeCategories = '' %}
-{% set myExCategories =
-  content.field_ucb_exclude_category|render|striptags|trim|split(' ')
-%}
-{% set excludeTags = '' %}
-{% set myExTags =
-  content.field_ucb_exclude_tag|render|striptags|trim|split(' ')
-%}
+{% set includeCategories = '' %}
+{% set myCategories = content.field_ucb_filter_by_category|render|striptags|trim|split(' ') %}
 
-{# two passes to clear out the blank entries that are mysteriously added by default #}
+{% set includeTags = '' %}
+{% set myTags = content.field_ucb_filter_by_tag|render|striptags|trim|split(' ') %}
+
+{% set excludeCategories = '' %}
+{% set myExCategories = content.field_ucb_exclude_category|render|striptags|trim|split(' ') %}
+
+{% set excludeTags = '' %}
+{% set myExTags = content.field_ucb_exclude_tag|render|striptags|trim|split(' ') %}
+
+{# Process include categories and tags as comma-separated strings #}
 {% for item in myCategories %}
   {% if item %}
-    {% set includeCategories = includeCategories|merge([item]) %}
+    {% if loop.first %}
+      {% set includeCategories = (item|trim) %}
+    {% else %}
+      {% set includeCategories = includeCategories ~ ',' ~ (item|trim) %}
+    {% endif %}
   {% endif %}
 {% endfor %}
 
 {% for item in myTags %}
   {% if item %}
-    {% set includeTags = includeTags|merge([item]) %}
+    {% if loop.first %}
+      {% set includeTags = (item|trim) %}
+    {% else %}
+      {% set includeTags = includeTags ~ ',' ~ (item|trim) %}
+    {% endif %}
   {% endif %}
 {% endfor %}
 
+{# Process exclude categories and tags as comma-separated strings #}
 {% for item in myExCategories %}
   {% if item %}
-    {% if loop.last %}
-      {% set excludeCategories = excludeCategories ~ (item|trim) %}
+    {% if loop.first %}
+      {% set excludeCategories = (item|trim) %}
     {% else %}
-      {% set excludeCategories = excludeCategories ~ (item|trim) ~ ',' %}
+      {% set excludeCategories = excludeCategories ~ ',' ~ (item|trim) %}
     {% endif %}
   {% endif %}
 {% endfor %}
 
 {% for item in myExTags %}
   {% if item %}
-    {% if loop.last %}
-      {% set excludeTags = excludeTags ~ (item|trim) %}
+    {% if loop.first %}
+      {% set excludeTags = (item|trim) %}
     {% else %}
-      {% set excludeTags = excludeTags ~ (item|trim) ~ ',' %}
+      {% set excludeTags = excludeTags ~ ',' ~ (item|trim) %}
     {% endif %}
   {% endif %}
 {% endfor %}
 
-{# placeholder variables for our include and exclude filters, default to blank strings #}
+{# placeholder variables for our include and exclude filters, default to blank strings
 {% set IncludeFilter = '' %}
 {% set IncludeCategoryFilter = '' %}
 {% set IncludeTagsFilter = '' %}
@@ -152,7 +153,7 @@
 {% set ExcludeTagsFilter = '' %}
 
 {# Setup Include Category Filter using a logical OR between included category IDs #}
-{% if includeCategories|length %}
+{# {% if includeCategories|length %}
   {% set includeGroupMembers = '' %}
   {% for item in includeCategories %}
     {% set includeGroupMembers = includeGroupMembers ~ '&filter[filter-cat'
@@ -170,10 +171,10 @@
   {% set IncludeCategoryFilter = '&filter[cat-include][group][conjunction]=OR'
     ~ includeGroupMembers
   %}
-{% endif %}
+{% endif %} #}
 
 {# Setup Include Tags Filter using a logical OR between included tag IDs #}
-{% if includeTags|length %}
+{# {% if includeTags|length %}
   {% set includeGroupMembers = '' %}
   {% for item in includeTags %}
     {% set includeGroupMembers = includeGroupMembers ~ '&filter[filter-tag'
@@ -191,11 +192,11 @@
   {% set IncludeTagsFilter = '&filter[tag-include][group][conjunction]=OR'
     ~ includeGroupMembers
   %}
-{% endif %}
+{% endif %} #}
 
 {# check to see if we have both Categories and Tags to filter on #}
 {# if so... setup a logicial AND Between both include filters #}
-{% if IncludeCategoryFilter and IncludeTagsFilter %}
+{# {% if IncludeCategoryFilter and IncludeTagsFilter %}
   {% set IncludeFilter = '&filter[published][group][conjunction]=AND'
     ~ PublishedFilter
     ~ '&filter[include-group][group][conjunction]=AND'
@@ -204,9 +205,9 @@
     ~ '&filter[cat-include][group][memberOf]=include-group'
     ~ IncludeTagsFilter
     ~ '&filter[tag-include][group][memberOf]=include-group'
-  %}
+  %} #}
   {# Otherwise default to either the Category filter or the Tag filter as defined #}
-{% elseif IncludeCategoryFilter %}
+{# {% elseif IncludeCategoryFilter %}
   {% set IncludeFilter = '&filter[published][group][conjunction]=AND'
     ~ '&filter[cat-include][group][memberOf]=published'
     ~ PublishedFilter
@@ -217,19 +218,19 @@
     ~ '&filter[tag-include][group][memberOf]=published'
     ~ PublishedFilter
     ~ IncludeTagsFilter
-  %}
+  %} #}
 
 {# no includeded Categories or Tags ... still need to filter on published articles #}
-{% else %}
+{# {% else %}
   {% set IncludeFilter = '&filter[status][value]=1' %}
 {% endif %}
 
 {# pagination filter #}
-{% set pageCount = 10 %}
-{% set pageCountFilter = '&page[limit]=' ~ pageCount %}
+{# {% set pageCount = 10 %}
+{% set pageCountFilter = '&page[limit]=' ~ pageCount %} #}
 
 {# sorting filter #}
-{% set sortFilter = '&sort[sort-created][path]=created&sort[sort-created][direction]=DESC' %}
+{# {% set sortFilter = '&sort[sort-created][path]=created&sort[sort-created][direction]=DESC' %} #} #} #}
 
 
 {# Check for Exclude Categories and setup the filter to exclude anything that matches "NOT IN SET" #}
@@ -245,8 +246,7 @@
        '&filter[filter-excat][condition][operator]=NOT%20IN' ~
        excludeGroupMembers
   %}
-{% endif %} #}
-{#
+{% endif %}
 {% if excludeCategories|length %}
   {% set excludeGroupMembers = "" %}
   {% for item in excludeCategories %}
@@ -259,7 +259,7 @@
 
   {% endfor %}
   {% set ExcludeCategoryFilter = "&filter[cat-exclude][group][conjunction]=AND" ~ excludeGroupMembers %}
-{% endif %} #}
+{% endif %}
 
 {# JSON API Filter logic #}
 <article{{ attributes.addClass('container', 'ucb-content-wrapper') }}>
@@ -271,13 +271,15 @@
     <div class="ucb-article-list-body">
       {{ content.body }}
     </div>
-    <div{{ create_attribute({
+    {# PUT ART-LIST COMPONENT HERE #}
+    <article-list{{ create_attribute({
       id: 'ucb-article-listing',
       class: 'ucb-article-list-container',
-      'data-jsonapi': articlesJSON ~ IncludeFilter ~ pageCountFilter ~ sortFilter,
-      'data-baseuri' : baseurlJSON,
-      'data-excats': excludeCategories,
-      'data-extags': excludeTags }) }}>
+      'base-uri' : baseurlJSON,
+      'include-categories' : includeCategories,
+      'include-tags' : includeTags,
+      'exclude-categories': excludeCategories,
+      'exclude-tags': excludeTags }) }}>
       {# No Data message #}
       <div id="ucb-al-no-results" class="ucb-list-msg ucb-no-data">
         No articles were returned, please check your filters and try again.
@@ -305,6 +307,7 @@
           Load More
         </a>
       </div>
-    </div>
+    </article-list>
+    {# End Here #}
   </div>
 </article>
