Article List: remove logic from Twig, remove loader/load/error

--- a/templates/content/node--ucb-article-list.html.twig
+++ b/templates/content/node--ucb-article-list.html.twig
@@ -280,34 +280,35 @@
       'include-tags' : includeTags,
       'exclude-categories': excludeCategories,
       'exclude-tags': excludeTags }) }}>
-      {# No Data message #}
+
+
+      {# No Data message
       <div id="ucb-al-no-results" class="ucb-list-msg ucb-no-data">
         No articles were returned, please check your filters and try again.
       </div>
 
       {# dynamically loaded data goes here... #}
-      <div id="ucb-al-data"></div>
+      {# <div id="ucb-al-data"></div> #}
 
       {# Loading message #}
-      <div id="ucb-al-loading" class="ucb-list-msg ucb-loading-data">
+      {# <div id="ucb-al-loading" class="ucb-list-msg ucb-loading-data">
         <i class="fa-solid fa-spinner fa-3x fa-spin-pulse"></i>
-      </div>
+      </div> #}
 
       {# No more Data #}
-      <div id="ucb-al-end-of-data" class="ucb-list-msg ucb-end-of-results">
+      {# <div id="ucb-al-end-of-data" class="ucb-list-msg ucb-end-of-results">
         No more results matching your filters.
-      </div>
+      </div> #}
 
       {# Error in the response from the API endpoint, display an error #}
-      <div id="ucb-al-error" class="ucb-list-msg ucb-error">
+      {# <div id="ucb-al-error" class="ucb-list-msg ucb-error">
         Error retrieving article list from the API endpoint.  Please try again later.
       </div>
       <div class="ucb-article-list-button-container">
         <a id='ucb-el-load-more'class="ucb-article-list-button">
           Load More
         </a>
-      </div>
+      </div> #}
     </article-list>
-    {# End Here #}
   </div>
 </article>
