CuBoulder/tiamat-theme#1358 Fixes padding below article header

--- a/css/ucb-article.css
+++ b/css/ucb-article.css
@@ -135,13 +135,12 @@ i.fa-regular.fa-calendar {
   content: ",";
 }
 
-
 .backgroundTitleDiv {
   position: relative;
   z-index: 0;
   object-fit: fill;
   background-size: cover;
-  padding-bottom: 20px;
+  margin-bottom: 20px;
 }
 
 .backgroundTitleDiv .ucb-article-heading {
