--- a/css/ucb-article-list.css
+++ b/css/ucb-article-list.css
@@ -100,10 +100,11 @@
   margin-bottom: 20px;
   overflow: hidden;
   background-color: #e7e7e7;
+  display: flex;
+  align-items: center;
 }
 
-.form-item > .form-submit-btn {
-  margin-top: 21px;
+.form-submit-btn {
   font-size: 11px;
   font-weight: 500;
   box-shadow: 0 1px 2px rgb(0 0 0 / 20%);
