--- a/templates/block/block--video-hero-unit.html.twig
+++ b/templates/block/block--video-hero-unit.html.twig
@@ -89,7 +89,7 @@
         </div>
       </div>
       <script type="text/javascript">
-        window.addEventListener('load', () => enableVideoHero('{{ videoURL }}', '{{ blockId }}'));
+        window.addEventListener('DOMContentLoaded', () => enableVideoHero('{{ videoURL }}', '{{ blockId }}'));
       </script>
     {% endif %}
     {% set linkColor = content['#block_content'].field_link_color.value %}
