--- a/templates/block/block--video-reveal.html.twig
+++ b/templates/block/block--video-reveal.html.twig
@@ -32,7 +32,7 @@
       </button>
     </div>
     <div class="ucb-video-reveal-video-wrapper" id="ucb-video-reveal-video-wrapper-{{ blockId }}" data-video-url="{{ videoURL }}">
-      <script type="text/javascript">
+      <script type="text/javascript" defer>
         window.addEventListener('DOMContentLoaded', () => enableVideoReveal('{{ videoURL }}', 'ucb-video-reveal-video-wrapper-{{ blockId }}'));
       </script>
     </div>
