--- a/templates/block/block--video-hero-unit.html.twig
+++ b/templates/block/block--video-hero-unit.html.twig
@@ -88,7 +88,7 @@
           </div>
         </div>
       </div>
-      <script type="text/javascript">
+      <script type="text/javascript" defer>
         window.addEventListener('DOMContentLoaded', () => enableVideoHero('{{ videoURL }}', '{{ blockId }}'));
       </script>
     {% endif %}
