--- a/templates/field/field--field_mega_menu_text_above.html.twig
+++ b/templates/field/field--field_mega_menu_text_above.html.twig
@@ -1,4 +1,4 @@
-<div class = "ucb-mega-menu-text-above">
+<div class = "ucb-mega-menu-text-above ucb-mega-menu-column">
 {% for item in items %}
   {{ item.content}}
 {% endfor %}
