--- a/templates/block/block--aggregator-feed-block.html.twig
+++ b/templates/block/block--aggregator-feed-block.html.twig
@@ -1,39 +1,20 @@
 {#
 /**
- * @file
- * Theme override to display a block.
- *
- * Available variables:
- * - plugin_id: The ID of the block implementation.
- * - label: The configured label of the block if visible.
- * - configuration: A list of the block's configuration values.
- *   - label: The configured label for the block.
- *   - label_display: The display settings for the label.
- *   - provider: The module or other provider that provided this block plugin.
- *   - Block plugin specific settings will also be stored here.
- * - content: The content of this block.
- * - attributes: array of HTML attributes populated by modules, intended to
- *   be added to the main container tag of this template.
- *   - id: A valid HTML ID and guaranteed unique.
- * - title_attributes: Same as attributes, except applied to the main title
- *   tag that appears in the template.
- * - title_prefix: Additional output populated by modules, intended to be
- *   displayed in front of the main title tag that appears in the template.
- * - title_suffix: Additional output populated by modules, intended to be
- *   displayed after the main title tag that appears in the template.
- *
- * @see template_preprocess_block()
+ * @file Contains the template to display an Aggregator Feed block.
  */
 #}
-{{ attach_library('boulder_base/aggregator-feed-block') }}
-{%
-  set classes = [
-    'container',
-    'block',
-    'block-' ~ configuration.provider|clean_class,
-    'block-' ~ plugin_id|clean_class
-  ]
-%}
+{% set classes = [
+  'container',
+  'block',
+  'block-' ~ configuration.provider|clean_class,
+  'block-' ~ plugin_id|clean_class,
+  'bs-background-unstyled',
+  'bs-background-none',
+  'bs-title-scale-default',
+  'bs-content-scale-default',
+  'bs-heading-align-default'
+] %}
+
 <div{{ attributes.addClass(classes) }}>
   {{ title_prefix }}
   {% if label %}
@@ -41,7 +22,10 @@
   {% endif %}
   {{ title_suffix }}
   {% block content %}
-    {{ content.list|render }}
-	<a href="{{ content.more_link['#url'].options.entity.url.value }}" class="rss-site-link"><span class="rss-icon"><i class="fa fa-rss-square"></i></span> {{ content.more_link['#url'].options.entity.title.value }}</a>
+    {{ attach_library('boulder_base/aggregator-feed-block') }}
+    {{ content.list }}
+	  <a{{ create_attribute({ href: content.more_link['#url'].options.entity.url.value, class: 'rss-site-link' }) }}>
+      <span class="rss-icon"><i class="fa-solid fa-square-rss"></i></span> {{ content.more_link['#url'].options.entity.title.value }}
+    </a>
   {% endblock %}
 </div>
