--- a/templates/regions/region--footer.html.twig
+++ b/templates/regions/region--footer.html.twig
@@ -14,9 +14,7 @@
 #}
 
 {% if content %}
-  <div class="row row-cols-lg-4 row-cols-md-2 row-cols-1 footer-columns">
-    <div class="col flex-fill">
+  <div class="footer-columns">
       {{ content }}
-    </div>
   </div>
 {% endif %}
