--- a/templates/content/node--ucb-article.html.twig
+++ b/templates/content/node--ucb-article.html.twig
@@ -175,7 +175,7 @@
       {{ content.field_ucb_article_tags }}
       {% if content.field_appears_in_issue|render %}
         <div role="contentinfo" class="container ucb-article-issue" itemprop="keywords">
-          <div>
+          <div class="ucb-article-issue-icon" aria-hidden="true">
             <span class="visually-hidden">Issues:</span>
             <i class="fa-solid fa-book"></i>
           </div>
