--- a/css/block/ucb-latest-issue-block.css
+++ b/css/block/ucb-latest-issue-block.css
@@ -1,16 +1,18 @@
 .ucb-latest-issue-container{
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    margin-bottom: 20px;
+  overflow: hidden;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  margin: 0 -20px;
 }
 
 .ucb-latest-issue-card{
-    max-width: 20%;
-    margin-right: 20px;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
+  max-width: 25%;
+  padding: 0 20px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  margin-bottom: 20px;
 }
 
 .ucb-latest-issue-title{
@@ -20,8 +22,7 @@
 
 
 .ucb-latest-issue-img{
-    max-height: 200px;
-    max-width: 200px;
+  margin-bottom: 10px;
 }
 
 .ucb-latest-issue-archive-button{
@@ -33,5 +34,6 @@
 }
 
 .ucb-latest-issue-archive-container{
+    text-align: center;
     margin-bottom: 20px;
 }
