Article List block: fix height limit on wide

--- a/css/block/ucb-article-list-block.css
+++ b/css/block/ucb-article-list-block.css
@@ -42,7 +42,7 @@
 }
 
 .ucb-article-card-img-wide {
-  height: 500px !important;
+  /* height: 500px !important; */
   object-fit: cover !important;
   margin-bottom: 10px;
   width: 100%;
